小程序、收藏功能优化

--- a/frontend/sg-exam-next-app/src/assert/styles/subject.scss
+++ b/frontend/sg-exam-next-app/src/assert/styles/subject.scss
@@ -140,6 +140,7 @@
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 12px;
+  height: 140px;
   width: 347px;
   flex-shrink: 0;
   box-sizing: border-box;
