--- a/frontend/sg-exam-app/src/assets/css/style.scss
+++ b/frontend/sg-exam-app/src/assets/css/style.scss
@@ -1105,3 +1105,17 @@ img {
     margin-left: 30px;
   }
 }
+
+.subject-title-content {
+  p {
+    font-size: 18px;
+    line-height: normal;
+  }
+}
+
+.subject-option {
+  p {
+    font-size: 16px;
+    line-height: normal;
+  }
+}
