feat: 课程增加开始学习按钮

--- a/frontend/sg-exam-app/src/assets/css/style.scss
+++ b/frontend/sg-exam-app/src/assets/css/style.scss
@@ -81,6 +81,11 @@ img {
   margin-left: 100px;
 }
 
+.padding-50 {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 .padding-80 {
   padding-top: 80px;
   padding-bottom: 80px;
