--- a/frontend/sg-exam-next-app/src/assert/styles/subject.scss
+++ b/frontend/sg-exam-next-app/src/assert/styles/subject.scss
@@ -32,8 +32,9 @@
 }
 
 .subject-title, .answer-text-title {
+  font-size: 36px;
   display: flex;
-  margin: 0.6em 0;
+  margin: 0.9em 0;
   font-weight: 450;
   overflow: hidden;
 }
