improvement: PC、Admin 后台多项功能更新、bugfix

--- a/frontend/sg-exam-app/src/assets/css/_theme_color.scss
+++ b/frontend/sg-exam-app/src/assets/css/_theme_color.scss
@@ -7,11 +7,15 @@ $text-color: #5a5a5a;
 // Default Background
 $bg-default: #3762f0;
 
+$bg-default-hover: #1143ea;
+
 // Gray Background
 $bg-gray: #f7f7f7;
 
 // White Color
 $white-color: #ffffff;
+
+$yellow-color: #e3d21b;
 
 // Dark Color
 $dark-color: #1b1b1b;
@@ -27,3 +31,4 @@ $footer-color: #252525;
 
 // Border Color
 $border-color: #ebebeb;
+
